--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular2-fontawesome": "^0.9.3",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "primeng": "^4.3.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
